--- a/index.html
+++ b/index.html
@@ -164,6 +164,21 @@
             "UTENTE1-010": { subject: "PORTALE", message: "Attivazione completata. La transizione dimensionale è imminente.", type: "RICORDO" },
 
             // OGGETTI (Codici X-001 a X-003)
+            "UTENTE2-000": { subject: "000", message: "Ti risvegli di soprassalto. La testa è vuota. Non ricordi il tuo nome, la tua vita, nulla. Sei in un locale chiuso. La luce è fredda.
+
+Non c'è panico. C'è un'intensa, familiare, tensione nell'aria. Ti fermi. Senti. Osservi il vuoto nella tua mente.
+
+La tua memoria è bloccata, ma i tuoi occhi interiori sono aperti. E ti mostrano tre verità oscure:
+
+Vedi un'ombra fissa e nera, un male cristallizzato che aleggia sulla vittima. Non è stato un incidente, ma un'azione voluta e profonda.
+
+Osservi i presenti. Senti che alcuni di loro sono completamente spaesati. Sai però che c'è chi è circondato da un fumo sottile che ne rivela la natura ingannevole. Non fidarti: c'è chi sta tessendo una tela di menzogne.
+
+Avverti una pressione fortissima, un monito implicito. L'energia arcana, distorta e violenta, ti avvolge. Delle forze oscure cercheranno di accusarti o di manipolare la tua percezione.
+
+Tu sei il faro che deve squarciare l'oscurità. Hai la capacità di leggere i segni che gli altri non vedono. Quello che è successo non è un caso.
+
+È il momento di agire. Segui le visioni. Trova i tuoi oggetti, perché sono la chiave della tua forza. E scopri chi ha osato rompere l'equilibrio.", type: "OGGETTO" },
             "UTENTE2-001": { subject: "CLESSIDRA", message: "Ogni granello di sabbia è un sussurro del passato. Ascolta il ticchettio nascosto.", type: "OGGETTO" },
             "UTENTE2-002": { subject: "SCINTILLA", message: "L'elettricità è la forza vitale, la chiave per risvegliare l'antica macchina.", type: "OGGETTO" },
             "UTENTE2-003": { subject: "LABIRINTO", message: "Ogni svolta ti allontana dalla verità. Devi fidarti del tuo istinto, non della vista.", type: "OGGETTO" },
