--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <script>
         // ------------------------------------------------------------------------------------------------
-        // VARIABILI GLOBALI E COSTANTI
+        // VARIABILI GLOBALI E COSTANTI-
         // ------------------------------------------------------------------------------------------------
 
         // VARIABILE JOLLY: Inizializzata a ""
