--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     min-height: 0;
         }
     </style>
+    <link rel="icon" type="image/ico" href="icona.ico"> <!--relazione-tipo/estensione-indirizzo del file-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"> <!--collegamento al sito delle icone-->
 </head>
@@ -162,6 +163,22 @@
                         class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg shadow-lg transition duration-200 ease-in-out transform hover:scale-[1.01]">
                     Controlla Codice
                 </button>
+                <!-- bottone scan -->
+                 <div id="scannerModal" class="modal-overlay hidden">
+                        <div class="modal-content text-center">
+                            <h3 class="text-xl font-bold text-indigo-600 mb-3">Scanner Codice QR/Barre</h3>
+                            <p class="text-gray-700 mb-4">Inquadra il codice per inserirlo automaticamente.</p>
+                            
+                            <div id="reader" style="width: 100%; height: 250px;"></div>
+
+                            <div class="flex justify-around space-x-4 mt-6">
+                                <button class="scan" onclick="hideScannerModal()"
+                                        class="flex-1 px-4 py-2 bg-gray-200 text-gray-800 font-semibold rounded-lg hover:bg-gray-300 transition duration-150">
+                                    Chiudi Scanner
+                                </button>
+                            </div>
+                        </div>
+                    </div>
 
                 <!-- ****NUOVO PULSANTE DI RECAP
                  <button onclick="showRecapConfirmation()"
@@ -236,7 +253,7 @@
     <!-- MODAL PER LA FINESTRA DEGLI APPUNTI -->
     <div id="ShowNModal" class="modal-overlay hidden">
         <div class="modal-content text-center">
-            <h3 class="text-xl font-bold text-red-600 mb-3">Nome Personaggio</h3>
+            <h3 class="text-xl font-bold text-red-600 mb-3">Le tue note</h3>
             <div class="bulele"><p class="text-gray-700 mb-6">
                 <textarea id="noteInput" 
                       placeholder="Scrivi qui le tue note sul personaggio..."
